# web3-tools

./: .gitignore  Genesis-Token.txt  Genesis-wallet.json  README.md  a.torrent  blockchain.json.torrent  docs.torrent  justfile  pyproject.toml  readme.md.torrent  requirements.txt  torrent_0.json.torrent  torrent_1.json  web3-tools.7z
blocks/: genesis_block.json
docs/: add-front-matter.py  t1.md  t10.md  t11.md  t12.md  t13.md  t14.md  t15.md  t16.md  t17.md  t18.md  t19.md  t2.md  t20.md  t21.md  t3.md  t4.md  t5.md  t6.md  t7.md  t8.md  t9.md
shards/: shard_0.db  shard_1.db  shard_2.db  shard_3.db  shard_4.db  shard_5.db  shard_6.db  shard_7.db  shard_8.db  shard_9.db
src/: CQLangCompiler.py  Genesis-Token.txt  MISA_VM.py  a.py  b1.py  block.py  blockchain-v27Nov2024.py  blockchain-v29Nov2024.py  blockchain.json  blockchain.py  compiler.py  cryptoleq.py  dao.py  db.py  nft.py  nft_v1.py  run_compiler_vm.py  smart_contract_executor.py  t1.md  t1.py  t10.md  t2.md  t3,md  t3.md  t4.md  t5.md  t6.md  t7.md  t8.md  t9.md  test.py  torrent.py  torrent_0.json  wallet.py
src/archive_23oct/: Alice.json  Bob.json  b1_v0411.py  b2_v0411.py  b3_v0411.py  block.py  block_35a00401-f642-4cd6-894d-16881bb2540d.json  block_v0411.py  blockchain_v0411.py  chain.py  test_block.py  test_blockchain.py  transaction.py  wallet.py
src/compiler/: code-generator.py  code_generator.py  compiler.py  crptoleq-compiler.py  crptoleq_compiler.py  cryptoleq.py  lexer.py  parser.py
src/dao_uni/: block.py  blockchain.py  (+9 more)
tests/: t12.md  t14.md  t15.md  t16.md  t7.md  t8.md  t9.md  test_dao.py
(+11 files in other folders)
