[tool.poetry]
name = "web3-tools"
version = "0.1.0"
description = "Agregation of web3 technology tools"
authors = ["charudatta <152109007c@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
jwt = "^1.3.1"
requests = "2.22.0"
urllib3 = ">=1.21.1,<1.26"
qbittorrent-api = "^2024.11.70"
six = "1.16.0"
cryptography = "^44.0.0"
pyjwt = "^2.10.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
blockchain = "src.blockchain:main"


